--- a/index.html
+++ b/index.html
@@ -535,6 +535,15 @@ function refreshRoadStylesFromState() {
   function layersFor(name) {
   return (window.nameToLayers && nameToLayers[name]) ? nameToLayers[name] : [];
 }
+function markRoadAsCorrect(roadName) {
+  const group = layersFor(roadName);
+  for (const l of group) {
+    const id = String(l?.feature?.id ?? '');
+    const prev = segmentStateMap.get(id) || {};
+    segmentStateMap.set(id, { ...prev, correct: true, used_hint: false, incorrect: false });
+    applyRoadStateStyle(l); // green + weight + inert + class
+  }
+}
 
 function clearActiveHighlight() {
   if (!window.activeRoadName || !window.nameToLayers) return;
