--- a/index.html
+++ b/index.html
@@ -639,32 +639,53 @@ function normalizeAllRoadStyles() {
     console.warn('normalizeAllRoadStyles error:', e);
   }
 }
-function applyRoadStateStyle(layer) {
+function applyRoadStateStyle(layer, opts = {}) {
+  const { noAnimate = false } = opts;
   const id = String(layer?.feature?.id ?? '');
   const st = segmentStateMap?.get(id);
+  const el = layer._path;
+
+  // temporarily disable transitions if requested
+  let prevTransition = '';
+  if (noAnimate && el) {
+    prevTransition = el.style.transition;
+    el.style.transition = 'none';
+  }
 
   if (st?.correct) {
     layer.setStyle({ color: '#00a65a', weight: WEIGHT_SOLVED, opacity: 1 });
     layer.options.interactive = false;
-    const el = layer._path; if (el) el.style.pointerEvents = 'none';
-    layer._path?.classList.add('correct-final');
-    layer._originalColor = 'greenish';     // ← keep internal flag in sync
-    return;
-  }
-  if (st?.used_hint) {
+    if (el) {
+      el.style.pointerEvents = 'none';
+      el.classList.add('correct-final');
+    }
+    layer._originalColor = 'greenish';
+  } else if (st?.used_hint) {
     layer.setStyle({ color: 'orange', weight: WEIGHT_DEFAULT, opacity: 1 });
     layer.options.interactive = true;
-    const el = layer._path; if (el) el.style.pointerEvents = 'auto';
-    layer._path?.classList.remove('correct-final');
-    layer._originalColor = 'orange';       // ← sync
-    return;
+    if (el) {
+      el.style.pointerEvents = 'auto';
+      el.classList.remove('correct-final');
+    }
+    layer._originalColor = 'orange';
+  } else {
+    layer.setStyle({ color: 'black', weight: WEIGHT_DEFAULT, opacity: 1 });
+    layer.options.interactive = true;
+    if (el) {
+      el.style.pointerEvents = 'auto';
+      el.classList.remove('correct-final');
+    }
+    layer._originalColor = 'black';
   }
-  layer.setStyle({ color: 'black', weight: WEIGHT_DEFAULT, opacity: 1 });
-  layer.options.interactive = true;
-  const el = layer._path; if (el) el.style.pointerEvents = 'auto';
-  layer._path?.classList.remove('correct-final');
-  layer._originalColor = 'black';          // ← sync
+
+  // restore transitions on next frame if we disabled them
+  if (noAnimate && el) {
+    // force reflow then restore
+    void el.getBoundingClientRect();
+    el.style.transition = prevTransition;
+  }
 }
+
 
 
 
