--- a/index.html
+++ b/index.html
@@ -1059,6 +1059,7 @@ worldMask.eachLayer(layer => {
 
   // ✅ Show roads after MT is clicked
   map.addLayer(roadsLayerGroup);
+                        map.addLayer(roadsBufferGroup);
 });
 
                   }
