--- a/index.html
+++ b/index.html
@@ -1104,29 +1104,50 @@ loadMap();
   updateBackButtonVisibility();
   document.getElementById('exit-zone-btn')?.addEventListener('click', () => {
   // Back from Township → County
-  if (currentLayerDepth === 3) {
-    insideManheim = false;
+if (currentLayerDepth === 3) {
+  insideManheim = false;
 
-    // Hide roads + buffers
-    if (map.hasLayer(roadsLayerGroup)) map.removeLayer(roadsLayerGroup);
-    if (map.hasLayer(roadsBufferGroup)) map.removeLayer(roadsBufferGroup);
+  // Hide roads + buffers
+  if (map.hasLayer(roadsLayerGroup))  map.removeLayer(roadsLayerGroup);
+  if (map.hasLayer(roadsBufferGroup)) map.removeLayer(roadsBufferGroup);
 
-    // Rebuild county-level mask
-    if (worldMask) { map.removeLayer(worldMask); worldMask = null; }
-    if (countyFeatureRef) {
-      worldMask = L.geoJSON(createWorldMask(countyFeatureRef), {
-        style: { fillColor:'#cccccc', fillOpacity:0.7, stroke:false, pane:'maskPane' }
-      }).addTo(map);
-      worldMask.eachLayer(l => { const el = l.getElement(); if (el) el.style.pointerEvents = 'none'; });
-    }
-
-    // Zoom back to county
-    if (countyLayerRef) map.fitBounds(countyLayerRef.getBounds(), { padding:[40,40], maxZoom:12 });
-
-    currentLayerDepth = 2;
-    updateBackButtonVisibility();
-    return;
+  // Remove township layer so it doesn't keep blocking clicks
+  if (townshipLayerRef && map.hasLayer(townshipLayerRef)) {
+    try { map.removeLayer(townshipLayerRef); } catch {}
   }
+
+  // Rebuild county-level mask
+  if (worldMask) { map.removeLayer(worldMask); worldMask = null; }
+  if (countyFeatureRef) {
+    worldMask = L.geoJSON(createWorldMask(countyFeatureRef), {
+      style: { fillColor:'#cccccc', fillOpacity:0.7, stroke:false, pane:'maskPane' }
+    }).addTo(map);
+    worldMask.eachLayer(l => { const el = l.getElement(); if (el) el.style.pointerEvents = 'none'; });
+  }
+
+  // Ensure county polygon is visible & interactive again
+  if (countyLayerRef) {
+    // make sure it's on the map
+    if (!map.hasLayer(countyLayerRef)) countyLayerRef.addTo(map);
+
+    try {
+      countyLayerRef.eachLayer(l => {
+        l.setStyle({ fillOpacity: 0.7 });
+        const p = l._path; if (p) { p.style.pointerEvents = 'auto'; p.style.outline = ''; }
+      });
+    } catch {}
+  }
+
+  // Zoom back to county
+  if (countyLayerRef) map.fitBounds(countyLayerRef.getBounds(), { padding:[40,40], maxZoom:12 });
+
+  // We are now "inside Lancaster", not in a township
+  insideLancaster   = true;
+  currentLayerDepth = 2;
+  updateBackButtonVisibility();
+  return;
+}
+
 
   // Back from County → Outside (initial)
   if (currentLayerDepth === 2) {
