--- a/index.html
+++ b/index.html
@@ -1104,77 +1104,73 @@ loadMap();
   updateBackButtonVisibility();
  document.getElementById('exit-zone-btn')?.addEventListener('click', () => {
   // ---------- Back from Township → County ----------
-  if (currentLayerDepth === 3) {
-    insideManheim = false;
+ // Back from Township → County (robust)
+if (currentLayerDepth === 3) {
+  insideManheim = false;
 
-    // 1) Hide roads + buffers
-    try {
-      if (typeof roadsLayerGroup   !== 'undefined' && map.hasLayer(roadsLayerGroup))   map.removeLayer(roadsLayerGroup);
-      if (typeof roadsBufferGroup  !== 'undefined' && map.hasLayer(roadsBufferGroup))  map.removeLayer(roadsBufferGroup);
-    } catch {}
+  // 1) Hide roads + buffers (but keep township polygon for county view)
+  try {
+    if (typeof roadsLayerGroup   !== 'undefined' && map.hasLayer(roadsLayerGroup))   map.removeLayer(roadsLayerGroup);
+    if (typeof roadsBufferGroup  !== 'undefined' && map.hasLayer(roadsBufferGroup))  map.removeLayer(roadsBufferGroup);
+  } catch {}
 
-    // 2) Remove township layer so it doesn't block clicks
-    try {
-      if (typeof townshipLayerRef !== 'undefined' && townshipLayerRef && map.hasLayer(townshipLayerRef)) {
-        map.removeLayer(townshipLayerRef);
-      }
-    } catch {}
+  // 2) Ensure township layer is PRESENT and interactive (we want to see/hover MT at county depth)
+  try {
+    if (typeof townshipLayerRef !== 'undefined' && townshipLayerRef) {
+      if (!map.hasLayer(townshipLayerRef)) townshipLayerRef.addTo(map);
+      townshipLayerRef.eachLayer(mt => {
+        mt.setStyle({ fillOpacity: 0.25 }); // your county-depth style
+        const p = mt._path; if (p) p.style.pointerEvents = 'auto';
+      });
+    }
+  } catch {}
 
-    // 3) Make sure the county layer is on the map & interactive
-    try {
-      if (countyLayerRef && !map.hasLayer(countyLayerRef)) countyLayerRef.addTo(map);
-      if (countyLayerRef) {
-        countyLayerRef.eachLayer(l => {
-          l.setStyle({ fillOpacity: 0.7 });
-          const p = l._path; if (p) { p.style.pointerEvents = 'auto'; p.style.outline = ''; }
-        });
-      }
-    } catch {}
+  // 3) County layer visible & interactive
+  try {
+    if (countyLayerRef && !map.hasLayer(countyLayerRef)) countyLayerRef.addTo(map);
+    if (countyLayerRef) {
+      countyLayerRef.eachLayer(l => {
+        l.setStyle({ fillOpacity: 0.7 });
+        const p = l._path; if (p) { p.style.pointerEvents = 'auto'; p.style.outline = ''; }
+      });
+    }
+  } catch {}
 
-    // 4) Rebuild the county-level mask (robust, with fallbacks)
-    try {
-      // Remove any existing mask
-      if (typeof worldMask !== 'undefined' && worldMask) { map.removeLayer(worldMask); worldMask = null; }
+  // 4) Rebuild mask OUTSIDE Lancaster only, using the saved county feature (no fallback that can flip it)
+  try {
+    // remove old mask
+    if (typeof worldMask !== 'undefined' && worldMask) { map.removeLayer(worldMask); worldMask = null; }
 
-      // Ensure mask pane exists
-      if (!map.getPane('maskPane')) {
-        map.createPane('maskPane');
-        const mp = map.getPane('maskPane');
-        if (mp) mp.style.zIndex = 210; // slightly above base layers
-      }
+    // pane safety
+    if (!map.getPane('maskPane')) {
+      map.createPane('maskPane');
+      const mp = map.getPane('maskPane'); if (mp) mp.style.zIndex = 210;
+    }
+    // IMPORTANT: only use the original county feature (prevents “inside masked” flip)
+    if (typeof countyFeatureRef !== 'undefined' && countyFeatureRef && typeof createWorldMask === 'function') {
+      worldMask = L.geoJSON(createWorldMask(countyFeatureRef), {
+        style: { fillColor:'#cccccc', fillOpacity:0.7, stroke:false, pane:'maskPane' }
+      }).addTo(map);
+      try { worldMask.eachLayer(l => { const el = l.getElement?.(); if (el) el.style.pointerEvents = 'none'; }); } catch {}
+    } else {
+      console.warn('countyFeatureRef missing; mask not rebuilt to avoid inverted interior.');
+    }
+  } catch {}
 
-      // Get a county feature to mask with (prefer the one we captured; else derive)
-      let featureForMask = (typeof countyFeatureRef !== 'undefined' && countyFeatureRef) ? countyFeatureRef : null;
-      if (!featureForMask && countyLayerRef && typeof countyLayerRef.toGeoJSON === 'function') {
-        const gj = countyLayerRef.toGeoJSON();
-        featureForMask = (gj && Array.isArray(gj.features)) ? gj.features[0] : gj;
-      }
+  // 5) Zoom to county
+  try {
+    if (countyLayerRef && typeof countyLayerRef.getBounds === 'function') {
+      map.fitBounds(countyLayerRef.getBounds(), { padding:[40,40], maxZoom:12 });
+    }
+  } catch {}
 
-      if (featureForMask && typeof createWorldMask === 'function') {
-        worldMask = L.geoJSON(createWorldMask(featureForMask), {
-          style: { fillColor:'#cccccc', fillOpacity:0.7, stroke:false, pane:'maskPane' }
-        }).addTo(map);
+  // 6) State → inside county
+  insideLancaster   = true;
+  currentLayerDepth = 2;
+  updateBackButtonVisibility();
+  return;
+}
 
-        // Make the mask ignore pointer events
-        try {
-          worldMask.eachLayer(l => { const el = l.getElement?.(); if (el) el.style.pointerEvents = 'none'; });
-        } catch {}
-      }
-    } catch {}
-
-    // 5) Zoom back to county bounds
-    try {
-      if (countyLayerRef && typeof countyLayerRef.getBounds === 'function') {
-        map.fitBounds(countyLayerRef.getBounds(), { padding:[40,40], maxZoom:12 });
-      }
-    } catch {}
-
-    // 6) Set state → inside county
-    insideLancaster   = true;
-    currentLayerDepth = 2;
-    updateBackButtonVisibility();
-    return;
-  }
 
   // ---------- Back from County → World ----------
   if (currentLayerDepth === 2) {
